--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/r5fs88yd1/";
+    const URL = "https://teachablemachine.withgoogle.com/models/xlnIfHbW-/";
 
     let model, webcam, labelContainer, maxPredictions;
 
@@ -63,7 +63,6 @@
         }
     }
 </script>
-
 
 </body>
 </html>
