--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Robo Vision</title>
 </head>
 <body>
-	<div>Teachable Machine Image Model</div>
+<div>Teachable Machine Image Model</div>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
@@ -15,7 +15,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/xlnIfHbW-/";
+    const URL = "https://teachablemachine.withgoogle.com/models/jcc2Qq8M0/";
 
     let model, webcam, labelContainer, maxPredictions;
 
